--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
           <li><a href="#contact">Contacto</a></li>
           <li class="dropdown"><a href="#">Blog</a>
             <ul>
-              <li><a href="blog.html">Html</a></li>
-              <li><a href="css_blog.html">Css</a></li>
-              <li><a href="js_blog.html">JavaScripts</a></li>
+              <li><a href="pages/HTML/blog.html">Html</a></li>
+              <li><a href="pages/CSS/css_blog.html">Css</a></li>
+              <li><a href="pages/JAVASCRIPT/javascript.html">JavaScripts</a></li>
+              <li><a href="/pages/Pensamiento_Computacional/Pensamiento_Computacional.html">Pensamiento Computacional</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span> Quiz</span></a>
@@ -77,7 +78,7 @@
           <h2>Bienvenido a <span>Thinking</span></h2>
           <p>Una web donde te enseñaremos los conceptos básicos de programación y sus fundamentos.</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#" class="btn-get-started">Login</a>
+            <a href="pages/LOGIN/login.html" class="btn-get-started">Login</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
@@ -192,7 +193,7 @@
                 <i class="bi bi-filetype-html"></i>
               </div>
               <h3>HTML</h3>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+              <p>Lenguaje de marcado HTML5 utilizado en el desarrollo web para crear el contenido y la estructura de una página web.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -202,7 +203,7 @@
                 <i class="bi bi-filetype-css"></i>
               </div>
               <h3>CSS</h3>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+              <p>Lenguaje de hojas de estilos utilizado en el diseño web para dotar de aspecto visual a una página web.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -212,7 +213,7 @@
                 <i class="bi bi-filetype-js"></i>
               </div>
               <h3>JAVASCRIPT</h3>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+              <p>Lenguaje de programación interpretado utilizado en el lado del cliente (front-end) para dotar de mejoras dinámicas e interactivas a las páginas web.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -232,7 +233,7 @@
                 <i class="bi bi-calendar4-week"></i>
               </div>
               <h3>Contacto</h3>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+              <p>Sí tienes alguna duda sobre el blog puedes contactarnos a través del apartado contacto.</p>
             </div>
           </div><!-- End Service Item -->
 
