--- a/pages/JAVASCRIPT/javascirpt_blog.html
+++ b/pages/JAVASCRIPT/javascirpt_blog.html
@@ -77,7 +77,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>HTML</h2>
+              <h2>Introducción a HTML5</h2>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
           <ol>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/pages/HTML/blog.html">Html</a></li>
-            <li>¿Qué es HTML?</li>
+            <li>Introducción a HTML5</li>
           </ol>
         </div>
       </nav>
