--- a/pages/JAVASCRIPT/javascript.html
+++ b/pages/JAVASCRIPT/javascript.html
@@ -46,9 +46,9 @@
           <li><a href="/index.html">Contacto</a></li>
           <li class="dropdown"><a href="#">Blog</a>
             <ul>
-              <li><a href="blog.html">Html</a></li>
-              <li><a href="css_blog.html">Css</a></li>
-              <li><a href="js_blog.html">JavaScripts</a></li>
+              <li><a href="/pages/HTML/blog.html">Html</a></li>
+              <li><a href="/pages/CSS/css_blog.html">Css</a></li>
+              <li><a href="/pages/JAVASCRIPT/javascript.html">JavaScripts</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span> Quiz</span></a>
@@ -56,6 +56,7 @@
               <li><a href="/assets/Quiz/html/index.html">Html</a></li>
               <li><a href="/assets/Quiz/css/index.html">Css</a></li>
               <li><a href="/assets/Quiz/JavaScript/index.html">JavaScripts</a></li>
+              <li><a href="/pages/Pensamiento_Computacional/Pensamiento_Computacional.html">Pensamiento Computacional</a></li>
             </ul>
           </li>
         </ul>
