--- a/pages/Pensamiento_Computacional/Pensamiento_Computacional.html
+++ b/pages/Pensamiento_Computacional/Pensamiento_Computacional.html
@@ -8,8 +8,8 @@
   <meta content="" name="keywords">
   <title>Thinking</title>
   <!-- Favicons -->
-  <link href="assets/img/digital.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/digital.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
