--- a/pages/CSS/blog-css.html
+++ b/pages/CSS/blog-css.html
@@ -51,7 +51,7 @@
             <ul>
               <li><a href="assets/Quiz/html/index.html">HTML</a></li>
               <li><a href="assets/Quiz/css/index.html">CSS</a></li>
-              <li><a href="assets/Quiz/JavaScript/index.html">JAVASCRIPT</a></li>
+              <li><a href="assets/Quiz/JavaScript/index.html">JavaScript</a></li>
             </ul>
           </li>
         </ul>
@@ -81,7 +81,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Blog Details</li>
+            <li>CSS</li>
           </ol>
         </div>
       </nav>
@@ -97,7 +97,7 @@
                 <img src="/assets/img/css.jpg" alt="" class="img-fluid">
               </div>
 
-              <h2 class="title">¿Qué es HTML?</h2>
+              <h2 class="title">¿Qué es CSS?</h2>
 
               <div class="content">
                 <p>
@@ -121,7 +121,7 @@
                   El documento que lee el navegador está escrito en un lenguaje de marcado llamado HTML, que son las siglas de HyperText Markup Language (Lenguaje de marcas de hipertexto), o lo que es lo mismo, un lenguaje de etiquetas que permite incluir o hacer referencia a todo tipo de información.
                 </p>
 
-                <h3>¿Qué es una etiqueta HTML?</h3>
+                <h3>¿Qué es una etiqueta?</h3>
                 <p>
                   En el navegador Chrome, puedes pulsar la combinación de teclas <kbd>CTRL</kbd> + <kbd>u</kbd>para ver el código fuente de la página en la que te encuentras. Dicho documento esta formado por etiquetas, que son la base del lenguaje HTML.
 
