--- a/pages/HTML/html_blog.html
+++ b/pages/HTML/html_blog.html
@@ -49,14 +49,14 @@
             <ul>
               <li><a href="blog.html">Html</a></li>
               <li><a href="css_blog.html">Css</a></li>
-              <li><a href="js_blog.html">JavaScripts</a></li>
+              <li><a href="js_blog.html">JavaScript</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span> Quiz</span></a>
             <ul>
               <li><a href="/assets/Quiz/html/index.html">Html</a></li>
               <li><a href="/assets/Quiz/css/index.html">Css</a></li>
-              <li><a href="/assets/Quiz/JavaScript/index.html">JavaScripts</a></li>
+              <li><a href="/assets/Quiz/JavaScript/index.html">JavaScript</a></li>
             </ul>
           </li>
         </ul>
