--- a/pages/JAVASCRIPT/javascirpt_blog.html
+++ b/pages/JAVASCRIPT/javascirpt_blog.html
@@ -78,7 +78,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Introducción a javascript</h2>
+              <h2>javascript</h2>
             </div>
           </div>
         </div>
@@ -88,7 +88,7 @@
           <ol>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/pages/JAVASCRIPT/javascript.html">javascript</a></li>
-            <li>Introducción a HTML5</li>
+            <li>Introducción a JavaScript</li>
           </ol>
         </div>
       </nav>
@@ -108,7 +108,7 @@
                 <img src="/assets/img/javascript.jpg" alt="" class="img-fluid">
               </div>
 
-              <h2 class="title">¿Qué es HTML?</h2>
+              <h2 class="title">¿Qué es JavaScript?</h2>
 
               <div class="content">
                 <p>
@@ -132,7 +132,7 @@
                   El documento que lee el navegador está escrito en un lenguaje de marcado llamado HTML, que son las siglas de HyperText Markup Language (Lenguaje de marcas de hipertexto), o lo que es lo mismo, un lenguaje de etiquetas que permite incluir o hacer referencia a todo tipo de información.
                 </p>
 
-                <h3>¿Qué es una etiqueta HTML?</h3>
+                <h3>¿Qué es una etiqueta?</h3>
                 <p>
                   En el navegador Chrome, puedes pulsar la combinación de teclas <kbd>CTRL</kbd> + <kbd>u</kbd>para ver el código fuente de la página en la que te encuentras. Dicho documento esta formado por etiquetas, que son la base del lenguaje HTML.
 
