--- a/pages/CSS/css_blog.html
+++ b/pages/CSS/css_blog.html
@@ -48,7 +48,7 @@
             <ul>
               <li><a href="/pages/HTML/blog.html">Html</a></li>
               <li><a href="css_blog.html">Css</a></li>
-              <li><a href="/pages/JAVASCRIPT/javascript.html">JavaScripts</a></li>
+              <li><a href="/pages/JAVASCRIPT/javascript.html">JavaScript</a></li>
               <li><a href="/pages/Pensamiento_Computacional/Pensamiento_Computacional.html">Pensamiento Computacional</a></li>
             </ul>
           </li>
@@ -56,7 +56,7 @@
             <ul>
               <li><a href="/assets/Quiz/html/index.html">Html</a></li>
               <li><a href="/assets/Quiz/css/index.html">Css</a></li>
-              <li><a href="/assets/Quiz/JavaScript/index.html">JavaScripts</a></li>
+              <li><a href="/assets/Quiz/JavaScript/index.html">JavaScript</a></li>
             </ul>
           </li>
         </ul>
