--- a/pages/HTML/html_blog.html
+++ b/pages/HTML/html_blog.html
@@ -47,9 +47,10 @@
           <li><a href="/index.html">Contacto</a></li>
           <li class="dropdown"><a href="#">Blog</a>
             <ul>
-              <li><a href="blog.html">Html</a></li>
-              <li><a href="css_blog.html">Css</a></li>
-              <li><a href="js_blog.html">JavaScript</a></li>
+              <li><a href="/pages/HTML/blog.html">Html</a></li>
+              <li><a href="/pages/CSS/css_blog.html">Css</a></li>
+              <li><a href="/pages/JAVASCRIPT/javascript.html">JavaScript</a></li>
+              <li><a href="/pages/Pensamiento_Computacional/Pensamiento_Computacional.html">Pensamiento Computacional</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span> Quiz</span></a>
