--- a/pages/CSS/blog-css.html
+++ b/pages/CSS/blog-css.html
@@ -29,29 +29,35 @@
 </head>
 
 <body>
-
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center">
 
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="/index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Thingking<span>.</span></h1>
+        <h1>Thinking<span>.</span></h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">Sobre Nosotros</a></li>
-          <li><a href="index.html">Servicios</a></li>
-          <li><a href="index.html">Equipo</a></li>
-          <li><a href="index.html">Contacto</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/index.html">Sobre Nosotros</a></li>
+          <li><a href="/index.html">Servicios</a></li>
+          <li><a href="/index.html">Equipo</a></li>
+          <li><a href="/index.html">Contacto</a></li>
+          <li class="dropdown"><a href="#">Blog</a>
+            <ul>
+              <li><a href="/pages/HTML/blog.html">Html</a></li>
+              <li><a href="/pages/CSS/css_blog.html">Css</a></li>
+              <li><a href="/pages/JAVASCRIPT/javascript.html">JavaScript</a></li>
+              <li><a href="/pages/Pensamiento_Computacional/Pensamiento_Computacional.html">Pensamiento Computacional</a></li>
+            </ul>
+          </li>
           <li class="dropdown"><a href="#"><span> Quiz</span></a>
             <ul>
-              <li><a href="assets/Quiz/html/index.html">HTML</a></li>
-              <li><a href="assets/Quiz/css/index.html">CSS</a></li>
-              <li><a href="assets/Quiz/JavaScript/index.html">JavaScript</a></li>
+              <li><a href="/assets/Quiz/html/index.html">Html</a></li>
+              <li><a href="/assets/Quiz/css/index.html">Css</a></li>
+              <li><a href="/assets/Quiz/JavaScript/index.html">JavaScript</a></li>
             </ul>
           </li>
         </ul>
