--- a/pages/CSS/blog-css.html
+++ b/pages/CSS/blog-css.html
@@ -86,7 +86,7 @@
       <nav>
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li>CSS</li>
           </ol>
         </div>
